serviceaccount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-proje
  namespace: default
spec:
  serviceAccountName: sa-project
  containers:
    - image:  ozgurozturknet/k8s:latest
      name:  projectcontainer
      ports:
      - containerPort: 80
