statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name:  mongo-svc
  labels:
    app: mongo
spec:
  selector:
    app:  mongo
  ports:
  - port:  27017
    targetPort:  27017
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongostatefulset
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: mongo-svc
  replicas: 2
  template:
    metadata:
      labels:
        app: mongo
        environment: test
        replicaset: MainRepSet
    spec:
      terminationGracePeriodSeconds: 10
      nodeSelector:
        tier: production
      tolerations:
      - key: "tir"
        operator: "Equal"
        value: "production"
        effect: "NoSchedule"
      containers:
      - name: mongo-container
        image: mongo
        command:
          - "mongod"
          - "--binf_ip"
          - "0.0.0.0"
          - "--replSet"
          - "MainRepSet"
        resources:
          requests:
            cpu: 200m 
            memory: 200Mi
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-pv-claim
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-pv-claim
      annotations:
        volume.beta.kubernetes.io/storage-class: "default"
    spec:
      accessModes: ["ReadWriteOnce"]
      volumeMode: Filesystem
      resources:
        requests:
          storage: 2Gi
